# audiotomidi

./: CMakeLists.txt  README.md  copytodwarf.sh
cmake/: glibc-2.17.ver
cmake/aubio/: CMakeLists.txt
lv2/: audiotomidi.ttl  manifest.ttl  modgui.ttl
lv2/modgui/: icon-audiotomidi.html  stylesheet-audiotomidi.css  tuner.js
scripts/: build-mod-dwarf.sh  check-glibc-symbols.sh  diagnose-dwarf-binary.sh  install-mod-dwarf.sh  validate-lv2-bundle.sh  verify-dwarf-binary.sh
src/dsp/: analyser.cpp  analyser.hpp  logger.cpp  logger.hpp  span.hpp  spscRingBuffer.hpp  types.hpp
src/lv2/: plugin.cpp  ports.hpp
tests/: test_analyser.cpp  test_logger.cpp  test_ringbuffer.cpp  test_types.cpp
